--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-	<script type="text/javascript" src="libraries/processing.js"></script>
+	<meta charset="UTF-8">
+	<script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+
+	<script language="javascript" type="text/javascript" src="test.js"></script>
 </head>
 
 <style>
@@ -18,8 +21,6 @@ canvas {
 </style>
 
 <body>
-
-<canvas data-processing-sources="pendulum.pde"></canvas>
 
 </body>
 
