--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script language="javascript" src="libraries/p5.sound.js"></script>
 
 	<script language="javascript" type="text/javascript" src="test.js"></script>
+	<script language="javascript" type="text/javascript" src="Player.js"></script>
 </head>
 
 <style>
