--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<script language="javascript" type="text/javascript" src="test.js"></script>
 	<script language="javascript" type="text/javascript" src="Player.js"></script>
+	<script language="javascript" type="text/javascript" src="Animation.js"></script>
 </head>
 
 <style>
